Tue Sep 21 13:00:33 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CCF/CCF/IDL3/IDL3.vcproj:
        
          Added new files create by Boris for eventtype factory support.
          
        * CCF/CCF/IDL3/SemanticGraph/EventType.cpp:
        
          Fixed search-and-replace error in EventTypeFactory constructor
          that had it inheriting from itself.

Tue Sep 21 11:08:20 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/CCF/IDL2/SemanticGraph/ValueType.cpp:
	* CCF/CCF/IDL2/SemanticGraph/ValueType.hpp:
	* CCF/CCF/IDL2/Traversal/ValueType.hpp:
	* CCF/CCF/IDL3/Parser.cpp:
	* CCF/CCF/IDL3/Parser.hpp:
	* CCF/CCF/IDL3/SemanticAction.hpp:
	* CCF/CCF/IDL3/SemanticAction/EventTypeFactory.hpp:
	* CCF/CCF/IDL3/SemanticAction/Factory.hpp:
	* CCF/CCF/IDL3/SemanticAction/Impl/EventTypeFactory.cpp:
	* CCF/CCF/IDL3/SemanticAction/Impl/EventTypeFactory.hpp:
	* CCF/CCF/IDL3/SemanticAction/Impl/Factory.cpp:
	* CCF/CCF/IDL3/SemanticAction/Impl/Factory.hpp:
	* CCF/CCF/IDL3/SemanticGraph/EventType.cpp:
	* CCF/CCF/IDL3/SemanticGraph/EventType.hpp:
	* CCF/CCF/IDL3/Traversal/EventType.hpp:

	  Added support for eventtype factories.

Tue Sep 21 07:39:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/ciao/Context_Impl_Base.cpp:
          Use false instead of FALSE.

Mon Sep 20 18:47:47 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/Config_Handlers/Config_Handlers.mpc:

	  Use lit_libs for xercesc as suggested by Chad Elliott.

	* performance-tests/Protocols/Sender/Sender.idl:

	  Fixed the IDL to compile with the latest changes to IDL
	  compiler.

Mon Sep 20 18:43:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Benchmark/RoundTripServer/RoundTripServer.mpc:
          Added strategies as base project

Mon Sep 20 11:37:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/ciao/StandardConfigurator_Impl.h:
          Removed not needed qualifier, and fixed incorrect Id tag