@@ -1,3 +1,13 @@
+Tue Sep 21 13:04:39 2004  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * CIDLC/ServantGenerator.cpp:
+        * CIDLC/ServantSourceGenerator.cpp:
+        
+          Added code to check an eventtype used as an event consumer
+          in a component for the presence of an operation or
+          factory. If either is found, code generation for registering
+          the associated _init class with the container's ORB is skipped.
+
 Tue Sep 21 13:00:33 2004  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * CCF/CCF/IDL3/IDL3.vcproj:
